Deleting all tokens, add a comments

--- a/app.ipynb
+++ b/app.ipynb
@@ -6,20 +6,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import tweepy\r\n",
-    "import time\r\n",
+    "import tweepy #Import modules\r\n",
+    "import time # another 1\r\n",
     "print('Bot is here')\r\n",
-    "CONSUMER_KEY = \"1OpaYPXLqymWZ8KmW6odnfHmL\"\r\n",
-    "CONSUMER_SECRET = \"qBaIRmOtF3hlLSr6UaE6zZGzEB2OIyLnTZ0pZTOJB5qGvnJII6\"\r\n",
-    "BEARER_TOKEN = \"AAAAAAAAAAAAAAAAAAAAAEyORQEAAAAA51%2Fa4z4%2BZfVMt4EGeSGk73LikHA%3DUPheSlkjnSFPG9Zo9p82nijY2s75Lha4zsM5hP8XtCI8RswieW\"\r\n",
-    "ACCESS_KEY = \"2945480147-u4AFYid46R0BXQ45QAb2MlKKasHA4wl9csqoLmD\"\r\n",
-    "ACCESS_SECRET = \"G3YX9Q2Ns4gwoLr5iRnFS6PCKoHXBpmr4fk7eWromD2O7\"\r\n",
-    "auth = tweepy.OAuthHandler(CONSUMER_KEY,CONSUMER_SECRET)\r\n",
+    "CONSUMER_KEY = \"...\" #KEY for API\r\n",
+    "CONSUMER_SECRET = \"...\" #SECRET\r\n",
+    "BEARER_TOKEN = \"...\" #IDK but will be here...\r\n",
+    "ACCESS_KEY = \"...\" #TOKEN to account\r\n",
+    "ACCESS_SECRET = \"...\" #SECRET TOKEN\r\n",
+    "auth = tweepy.OAuthHandler(CONSUMER_KEY,CONSUMER_SECRET) #making a val for authorization\r\n",
     "auth.set_access_token(ACCESS_KEY, ACCESS_SECRET)\r\n",
     "\r\n",
-    "api = tweepy.API(auth)\r\n",
-    "api.update_status('another try')\r\n",
-    "FILE_NAME = 'last_seen.txt'"
+    "api = tweepy.API(auth) #api\r\n",
+    "api.update_status('another try') #tweet message in account\r\n",
+    "FILE_NAME = 'last_seen.txt' #file name with last post id"
    ]
   },
   {
@@ -28,31 +28,30 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def read_last_seen(FILE_NAME):\r\n",
+    "def read_last_seen(FILE_NAME): # function for real id\r\n",
     "    file_read = open(FILE_NAME, 'r')\r\n",
     "    last_seen_id = int(file_read.read().strip())\r\n",
     "    file_read.close\r\n",
     "    return last_seen_id\r\n",
     "\r\n",
-    "def store_last_seen(FILE_NAME,last_seen_id):\r\n",
+    "def store_last_seen(FILE_NAME,last_seen_id):    # function for enter new id\r\n",
     "    file_write = open(FILE_NAME, 'w')\r\n",
     "    file_write.write(str(last_seen_id))\r\n",
     "    file_write.close()\r\n",
     "    return \r\n",
-    "def reply():\r\n",
+    "def reply(): # function for reply to post \r\n",
     "\r\n",
-    "    tweets = api.mentions_timeline(read_last_seen(FILE_NAME), tweet_mode = 'extended')\r\n",
-    "    for tweet in reversed(tweets):\r\n",
-    "       # print(str(tweet.id) + ' - ' + tweet.full_text)\r\n",
-    "        if '#100ВDaysOfCode' in tweet.full_text.lower():\r\n",
-    "            print(str(tweet.id) + ' - ' + tweet.full_text)\r\n",
-    "            api.update_status(\"@\" + tweet.user.screen_name + \" Keep Work )\", tweet.id)\r\n",
-    "            api.create_favorite(tweet.id)\r\n",
-    "            api.retweet(tweet.id)\r\n",
-    "            store_last_seen(FILE_NAME,tweet.id)\r\n",
+    "    tweets = api.mentions_timeline(read_last_seen(FILE_NAME), tweet_mode = 'extended') # for mentions\r\n",
+    "    for tweet in reversed(tweets):  #cycle\r\n",
+    "        if '#100ВDaysOfCode' in tweet.full_text.lower(): # if hashtags in tweet\r\n",
+    "            print(str(tweet.id) + ' - ' + tweet.full_text) #print tweet id and full text\r\n",
+    "            api.update_status(\"@\" + tweet.user.screen_name + \" Keep Work )\", tweet.id) # replying\r\n",
+    "            api.create_favorite(tweet.id) # make a favorite tweet\r\n",
+    "            api.retweet(tweet.id) # retweet tweet\r\n",
+    "            store_last_seen(FILE_NAME,tweet.id) #change last id to new\r\n",
     "while True:\r\n",
-    "    reply()\r\n",
-    "    time.sleep(15)\r\n"
+    "    reply() # calling a function\r\n",
+    "    time.sleep(15) # every 15 seconds reboot\r\n"
    ]
   },
   {
@@ -83,16 +82,8 @@
    "name": "python3"
   },
   "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
    "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.9.1"
+   "version": ""
   },
   "orig_nbformat": 4
  },
